force-app/main/default/objects/leadenhancer_manual_match__c/leadenhancer_manual_match__c.object-meta.xml
<CustomObject>
    <label>Leadenhancer manual match</label>
    <nameField>
        <label>match_id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leadenhancer manual matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>