force-app/main/default/objects/leadenhancer_manual_match__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leadenhancer manual matches</relationshipLabel>
    <relationshipName>Leadenhancer_manual_matches</relationshipName>
    <type>Lookup</type>
</CustomField>