force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_account_id__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_account_id__c</fullName>
    <label>Account Id (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>