force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_address2__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_address2__c</fullName>
    <label>Address2 (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>