force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_city__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_city__c</fullName>
    <label>City (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>