force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_continent__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_continent__c</fullName>
    <label>Continent (leadenhancer)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>