force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_countryiso__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_countryiso__c</fullName>
    <label>Country (leadenhancer)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>