force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_email__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_email__c</fullName>
    <label>Email (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>