force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_phone__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_phone__c</fullName>
    <label>Phone (leadenhancer)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>