force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_postalcode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_postalcode__c</fullName>
    <label>Zip (leadenhancer)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>