force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_address_www__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_address_www__c</fullName>
    <label>Website (leadenhancer)</label>
    <type>Url</type>
</CustomField>