force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_duns__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_duns__c</fullName>
    <label>DUNS-Number (leadenhancer)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>