force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_id__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_id__c</fullName>
    <label>LeId (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>