force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_name__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_name__c</fullName>
    <label>Name (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>