force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_organisationid__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_organisationid__c</fullName>
    <label>Organisation Id (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>