force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_positionceo__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_positionceo__c</fullName>
    <label>Name CEO (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>