force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_positioncmo__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_positioncmo__c</fullName>
    <label>Name CMO (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>