force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_positioncso__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_positioncso__c</fullName>
    <label>Name CSO (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>