force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_sicprimarycode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sicprimarycode__c</fullName>
    <label>Standard Industrial Classification (le)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>