force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_sicprimarycodedescription__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sicprimarycodedescription__c</fullName>
    <label>Standard Industrial Classification desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>