force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_sninacecode__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sninacecode__c</fullName>
    <label>SniNaceCode (leadenhancer)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>