force-app/main/default/objects/leadenhancer_manual_match__c/fields/leadenhancer_sninacecodedescription__c.field-meta.xml
<CustomField>
    <fullName>leadenhancer_sninacecodedescription__c</fullName>
    <label>SniNaceCodeDescription (leadenhancer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>