force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_billing_address__c.field-meta.xml
<CustomField>
    <fullName>sfdc_billing_address__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>