force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_billing_city__c.field-meta.xml
<CustomField>
    <fullName>sfdc_billing_city__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>