force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_billing_country__c.field-meta.xml
<CustomField>
    <fullName>sfdc_billing_country__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>