force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_billing_state__c.field-meta.xml
<CustomField>
    <fullName>sfdc_billing_state__c</fullName>
    <formula>Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>