force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_billing_zip__c.field-meta.xml
<CustomField>
    <fullName>sfdc_billing_zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Zip</label>
    <type>Text</type>
</CustomField>