force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_fax__c.field-meta.xml
<CustomField>
    <fullName>sfdc_fax__c</fullName>
    <formula>Account__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax</label>
    <type>Text</type>
</CustomField>