force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_market__c.field-meta.xml
<CustomField>
    <fullName>sfdc_market__c</fullName>
    <formula>Account__r.Market_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>