force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_name__c.field-meta.xml
<CustomField>
    <fullName>sfdc_name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>