force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_phone__c.field-meta.xml
<CustomField>
    <fullName>sfdc_phone__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>