force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_shipping_address__c.field-meta.xml
<CustomField>
    <fullName>sfdc_shipping_address__c</fullName>
    <formula>Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>