force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_shipping_city__c.field-meta.xml
<CustomField>
    <fullName>sfdc_shipping_city__c</fullName>
    <formula>Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>