force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_shipping_country__c.field-meta.xml
<CustomField>
    <fullName>sfdc_shipping_country__c</fullName>
    <formula>Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>