force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_shipping_state__c.field-meta.xml
<CustomField>
    <fullName>sfdc_shipping_state__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>