force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_shipping_zip__c.field-meta.xml
<CustomField>
    <fullName>sfdc_shipping_zip__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip</label>
    <type>Text</type>
</CustomField>