force-app/main/default/objects/leadenhancer_manual_match__c/fields/sfdc_website__c.field-meta.xml
<CustomField>
    <fullName>sfdc_website__c</fullName>
    <formula>Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>